Bizfi Production/src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Lead_Phones__c</fullName>
        <description>SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Phone + &quot;;&quot; + MobilePhone + &quot;;&quot; + Fax + &quot;;&quot; + McaApp__Cell_Phone__c + &quot;;&quot; + Business_Main_Phone__c + &quot;;&quot; + Owner_2_Direct_Phone__c + &quot;;&quot; + Owner_2_Mobile__c + &quot;;&quot; + Owner_3_Direct_Phone__c + &quot;;&quot; + Owner_3_Mobile__c + &quot;;&quot; + Owner_4_Direct_Phone__c + &quot;;&quot; + Owner_4_Mobile__c + &quot;;&quot;, &quot;+&quot;, &quot;&quot;), &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;), &quot; &quot;, &quot;&quot;), &quot;-&quot;, &quot;&quot;)</description>
        <formula>SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Phone + &quot;;&quot; + MobilePhone + &quot;;&quot; + Fax + &quot;;&quot; + Business_Main_Phone__c + &quot;;&quot; + Owner_2_Direct_Phone__c + &quot;;&quot; + Owner_2_Mobile__c + &quot;;&quot; + Owner_3_Direct_Phone__c + &quot;;&quot; + Owner_3_Mobile__c + &quot;;&quot; + Owner_4_Direct_Phone__c + &quot;;&quot; + Owner_4_Mobile__c + &quot;;&quot;, &quot;+&quot;, &quot;&quot;), &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;), &quot; &quot;, &quot;&quot;), &quot;-&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Phones</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Score_Rating__c</fullName>
        <formula>IF(leadScoring__Total_Lead_Score__c=0, 
IMAGE(&apos;/resource/McaApp__Dollars/dollar_zero.png&apos;, &apos;zero&apos;), 
IF(AND(leadScoring__Total_Lead_Score__c &gt;=1 ,leadScoring__Total_Lead_Score__c &lt;=3), 
IMAGE(&apos;/resource/McaApp__Dollars/dollar_one.png&apos;, &apos;one&apos;), 
IF(AND(leadScoring__Total_Lead_Score__c &gt;=4 ,leadScoring__Total_Lead_Score__c &lt;=6), 
IMAGE(&apos;/resource/McaApp__Dollars/dollar_two.png&apos;, &apos;two&apos;), 
IF(AND(leadScoring__Total_Lead_Score__c &gt;=7 ,leadScoring__Total_Lead_Score__c &lt;=9), 
IMAGE(&apos;/resource/McaApp__Dollars/dollar_three.png&apos;, &apos;three&apos;), 
IF(AND(leadScoring__Total_Lead_Score__c &gt;=10 ,leadScoring__Total_Lead_Score__c &lt;=12),  
IMAGE(&apos;/resource/McaApp__Dollars/dollar_four.png&apos;, &apos;four&apos;), 
IMAGE(&apos;/resource/McaApp__Dollars/dollar_five.png&apos;, &apos;five&apos;))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Score Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Status_Category__c</fullName>
        <formula>CASE(Status, 
&apos;Open - Not Contacted&apos;, &apos;Active&apos;, 
&apos;Open - Attempting Contact&apos;, &apos;Active&apos;, 
&apos;Working - Contacted&apos;, &apos;Active&apos;, 
&apos;Inactive&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Status Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Dials__c</fullName>
        <description>Dials from InsideSales LMP</description>
        <inlineHelpText>Dials from InsideSales LMP</inlineHelpText>
        <label>Legacy Dials</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MCACE__ISO_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ISO #1 / Lead Source</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads (ISO #1 / Lead Source)</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MCACE__ISO_1_salesRep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ISO #1 / Lead Source Sales Rep</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads (ISO #1 / Lead Source Sales Rep)</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MCACE__ISO_2_Sales_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ISO #2 Sales Rep</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads (ISO #2 Sales Rep)</relationshipLabel>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MCACE__ISO_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ISO #2</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads (ISO #2)</relationshipLabel>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MCACE__ISO_3_Sales_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ISO #3 Sales Rep</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads (ISO #3 Sales Rep)</relationshipLabel>
        <relationshipName>Leads2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MCACE__ISO_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ISO #3</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads (ISO #3)</relationshipLabel>
        <relationshipName>Leads2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MCACE__ISO_4_Sales_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ISO #4 Sales Rep</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads (ISO #4 Sales Rep)</relationshipLabel>
        <relationshipName>Leads3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Match_Type__c</fullName>
        <label>Match Type</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>McaApp__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>McaApp__Activity_Count__c</fullName>
        <label>Activity Count</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>McaApp__Age_of_Lead_days__c</fullName>
        <formula>TODAY() - 

IF(NOT(ISBLANK(DATEVALUE(McaApp__Date_Lead_Received__c))),
DATEVALUE(McaApp__Date_Lead_Received__c), 
DATEVALUE(CreatedDate))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age (days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>McaApp__Amount_Requested__c</fullName>
        <label>Amount Requested</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>McaApp__Application_Missing_Info__c</fullName>
        <label>Application Missing Info</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>McaApp__Application_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Application Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>McaApp__Application_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Application Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>McaApp__Application_Type__c</fullName>
        <label>Application Type</label>
        <picklist>
            <picklistValues>
                <fullName>Business Cash Advance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Deck Capital Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Card Processing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vendor Alliance</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>McaApp__Average_Daily_Balance__c</fullName>
        <label>Average Daily Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>McaApp__Average_Monthly_CC_Sale__c</fullName>
        <label>Monthly Credit Card Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>McaApp__Best_Time_to_Call__c</fullName>
        <label>Best Time to Call</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>McaApp__Cell_Phone__c</fullName>
        <label>Cell Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>McaApp__Closed_Lost_Date_Time__c</fullName>
        <label>Closed - Lost Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>McaApp__Closed_Lost__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Closed - Lost</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>McaApp__ConvertOpportunity__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This field is passed to the opportunity (Created upon Convert field) and gives the ability to differentiate between opps created from Account or converted leads. Note this field is in addition to the Convert field on Lead which maps to ConvertedAccount field on Accounts</description>
        <label>ConvertOpportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>McaApp__Convert__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Convert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>McaApp__Credit_Score__c</fullName>
        <label>Credit Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>McaApp__CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>McaApp__DBA_Name__c</fullName>
        <label>DBA Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>McaApp__Date_App_Received__c</fullName>
        <label>Date App. Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>McaApp__Date_App_Sent__c</fullName>
        <label>Date App. Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>McaApp__Date_Applied__c</fullName>
        <label>Date Applied</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>McaApp__Date_Lead_Received__c</fullName>
        <label>Date Lead Received</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>McaApp__Description_of_Business__c</fullName>
        <label>Description of Business</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>McaApp__Desired_Amount__c</fullName>
        <label>Desired Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>McaApp__Funding_App__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Funding App</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>McaApp__Funding_amount__c</fullName>
        <label>FUNDING AMOUNT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>McaApp__ISO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>ISO that has submitted this lead</inlineHelpText>
        <label>ISO</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>McaApp__LeadDescriptionToMap__c</fullName>
        <label>LeadDescriptionToMap</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>McaApp__Lead_Created_Date_Copy_for_Mapping__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>This is to help map to Opportunity</description>
        <label>Lead Created Date (Copy for Mapping)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>McaApp__Leads__c</fullName>
        <formula>1</formula>
        <label>Leads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>McaApp__Legal_Name__c</fullName>
        <label>Legal Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>McaApp__Monthly_Gross_Sales__c</fullName>
        <label>Monthly Gross Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>McaApp__Next_Step__c</fullName>
        <label>Next Step</label>
        <picklist>
            <picklistValues>
                <fullName>Send Email 1a in 24h &amp; follow-up call 48h later</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Send Email 1b in 24h &amp; set reminder to close Lead 72h later</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Send Email 2a in 48h</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Send Email 2b in 2 weeks &amp; set reminder to close Lead 72h later</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Send Email 3a in 48h &amp; follow-up call 72h later</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Send Email 3b in 48h &amp; set reminder to close Lead 72h later</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>McaApp__NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>McaApp__Open_Attempting_Contact_Date_Time__c</fullName>
        <label>Open - Attempting Contact Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>McaApp__Open_Attempting_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Open - Attempting Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>McaApp__Open_Not_Contacted_Date_Time__c</fullName>
        <label>Open - Not Contacted Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>McaApp__Open_Not_Contacted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Open - Not Contacted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>McaApp__Primary__c</fullName>
        <label>Primary</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>McaApp__Processing_fee__c</fullName>
        <label>FEES (REVENUE)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>McaApp__ProductInterest__c</fullName>
        <label>Product Interest</label>
        <picklist>
            <picklistValues>
                <fullName>GC1000 series</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC5000 series</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC3000 series</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>McaApp__Program_Interest__c</fullName>
        <label>Program Interest</label>
        <picklist>
            <picklistValues>
                <fullName>Business Cash Advance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Deck Capital Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Card Processing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vendor Alliance</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>McaApp__Purpose_of_Funding__c</fullName>
        <label>Purpose of Funding</label>
        <picklist>
            <picklistValues>
                <fullName>Advertising/Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Taxes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Working Capital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buying Inventory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buying Out a Business Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equipment Purchase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expansion/New Location</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payroll</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remodeling/Upgrades</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temporary Staffing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade Show Participation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>McaApp__Rep__c</fullName>
        <label>Rep</label>
        <picklist>
            <picklistValues>
                <fullName>Joe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ben</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eli</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Geoff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Juan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avi</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>McaApp__Replacement_Reques__c</fullName>
        <inlineHelpText>.
.
[[ To submit Lead Replacement, ensure that: Company, Name, Phone, Email, Lead Source, Date Lead Received, &amp; Summary fields are finished. Save the lead page. Then, edit this field to &quot;Flagged&quot; and save the lead page again. Ariel will be emailed. ]]</inlineHelpText>
        <label>Replacement Request</label>
        <picklist>
            <picklistValues>
                <fullName>Flagged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denied</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>McaApp__SICCode__c</fullName>
        <label>SIC Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>McaApp__SSN__c</fullName>
        <label>@Deprecated SSN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>McaApp__Sales_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ISO Sales Rep</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Bank, ISO, Vendor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>McaApp__Set_Opportunity_Status__c</fullName>
        <defaultValue>true</defaultValue>
        <description>The check box  always turns to true,so that after lead convert will set &quot;Set Opportunity status&quot; to true on opportunity through lead mapping for setting opportunity status to &quot;Application In&quot;</description>
        <label>Set Opportunity Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>McaApp__Social_Security_Number__c</fullName>
        <description>The Social Security Number of the Lead.</description>
        <inlineHelpText>Enter the Social Security Number of the Lead as XXX-XX-XXXX.</inlineHelpText>
        <label>Social Security Number</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>McaApp__Sub_Status__c</fullName>
        <label>Sub Status</label>
        <picklist>
            <controllingField>Status</controllingField>
            <picklistValues>
                <fullName>Looking for Startup Capital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Time in Business too Short</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact Information Inaccurate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do Not Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not a Sales Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low Volume</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open Bankruptcy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restricted Industry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fraudulent Deal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unresponsive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing Merchant</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>McaApp__Term_Requested__c</fullName>
        <label>Term Requested</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>McaApp__Use_of_Proceeds__c</fullName>
        <label>Use of Proceeds</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>McaApp__Working_Contacted_Date_Time__c</fullName>
        <label>Working - Contacted Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>McaApp__Working_Contacted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Working - Contacted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>McaApp__Years_in_Business__c</fullName>
        <label>Years in Business</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>McaApp__calculated_irr__c</fullName>
        <label>XIRR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>McaApp__commission_amount__c</fullName>
        <label>COMMISSIONS (EXPENSES)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>McaApp__months__c</fullName>
        <label>TERM (MONTHS)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>McaApp__payback_amount__c</fullName>
        <label>REPAYMENT AMOUNT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Bank_Deposits__c</fullName>
        <label># Monthly Bank Deposits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_CC_Batches__c</fullName>
        <label># Monthly CC Batches</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_CC_Tickets__c</fullName>
        <label># Monthly CC Tickets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_CC_Transactions__c</fullName>
        <label># Monthly CC Transactions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Debt_Service__c</fullName>
        <label>Monthly Debt Service</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_NDBs__c</fullName>
        <label># Monthly NDBs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_NSFs__c</fullName>
        <label># Monthly NSFs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Online_Sales__c</fullName>
        <label>Monthly Online Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Payment__c</fullName>
        <label>Monthly Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Sent_To_InsideSales_DateTime__c</fullName>
        <label>Latest Sent To InsideSales Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Net_Profit_Loss_Amount__c</fullName>
        <label>Net Profit/Loss Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>No_of_Employees_Range__c</fullName>
        <label>No. of Employees (Range)</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OLDID__c</fullName>
        <externalId>true</externalId>
        <label>OLDID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Online_Sales__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Online Sales</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Open_Attempting_Contact_Date_Time__c</fullName>
        <label>Open - Attempting Contact Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Open_BK__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Open BK</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Open_Not_Contacted_Date_Time__c</fullName>
        <label>Open - Not Contacted Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Original_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Owner_1_Birthdate__c</fullName>
        <label>Owner 1 Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Owner_1_Credit_Score__c</fullName>
        <label>Owner 1 Credit Score</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Owner_1_Home_Address_City__c</fullName>
        <label>Owner 1 Home Address City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_1_Home_Address_State__c</fullName>
        <label>Owner 1 Home Address State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_1_Home_Address_Zip__c</fullName>
        <label>Owner 1 Home Address Zip</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_1_Home_Address__c</fullName>
        <label>Owner 1 Home Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_1_Ownership__c</fullName>
        <label>Owner 1 Ownership %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Owner_2_Birthdate__c</fullName>
        <label>Owner 2 Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Owner_2_Credit_Score__c</fullName>
        <label>Owner 2 Credit Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Owner_2_Direct_Phone__c</fullName>
        <label>Owner 2 Direct Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Owner_2_Email__c</fullName>
        <label>Owner 2 Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Owner_2_First_Name__c</fullName>
        <label>Owner 2 First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_2_Home_Address_City__c</fullName>
        <label>Owner 2 Home Address City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_2_Home_Address_State__c</fullName>
        <label>Owner 2 Home Address State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_2_Home_Address_Zip__c</fullName>
        <label>Owner 2 Home Address Zip</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_2_Home_Address__c</fullName>
        <label>Owner 2 Home Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_2_Last_Name__c</fullName>
        <label>Owner 2 Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_2_Mobile__c</fullName>
        <label>Owner 2 Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Owner_2_Ownership__c</fullName>
        <label>Owner 2 Ownership %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Owner_2_SSN__c</fullName>
        <label>Owner 2 SSN</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_2_Title__c</fullName>
        <label>Owner 2 Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_3_Birthdate__c</fullName>
        <label>Owner 3 Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Owner_3_Credit_Score__c</fullName>
        <label>Owner 3 Credit Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Owner_3_Direct_Phone__c</fullName>
        <label>Owner 3 Direct Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Owner_3_Email__c</fullName>
        <label>Owner 3 Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Owner_3_First_Name__c</fullName>
        <label>Owner 3 First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_3_Home_Address_City__c</fullName>
        <label>Owner 3 Home Address City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_3_Home_Address_State__c</fullName>
        <label>Owner 3 Home Address State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_3_Home_Address_Zip__c</fullName>
        <label>Owner 3 Home Address Zip</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_3_Home_Address__c</fullName>
        <label>Owner 3 Home Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_3_Last_Name__c</fullName>
        <label>Owner 3 Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_3_Mobile__c</fullName>
        <label>Owner 3 Mobile</label>
        <type>Phone</type>
    </fields>
</CustomObject>